# nanostructures4scintillators

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  N4S.cc  README.md
include/: HistoManager.hh  MyActionInitialization.hh  MyDetectorConstruction.hh  MyDetectorMessenger.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  Run.hh  RunAction.hh  SteppingAction.hh  TrackInformation.hh  TrackingAction.hh
macros/: example.mac  runrunrun.mac  setup.mac
src/: HistoManager.cc  MyActionInitialization.cc  MyDetectorConstruction.cc  MyDetectorMessenger.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  Run.cc  RunAction.cc  SteppingAction.cc  TrackInformation.cc  TrackingAction.cc
